--- a/imgui.ini
+++ b/imgui.ini
@@ -3,3 +3,18 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][joy]
+Pos=60,60
+Size=121,48
+Collapsed=0
+
+[Window][stick]
+Pos=60,60
+Size=346,71
+Collapsed=0
+
+[Window][collider]
+Pos=60,60
+Size=408,205
+Collapsed=0
+
